syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/aalug/blog-go/pb";

message CreateUserRequest {
    string email = 1;
    string username = 2;
    string password = 3;
}

message CreateUserResponse {
    User user = 1;
}